// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.rowSelection fix selection column on the left 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-scroll"
            >
              <div
                class="fishd-table-body"
              >
                <table
                  class=""
                >
                  <colgroup>
                    <col />
                    <col />
                  </colgroup>
                  <thead
                    class="fishd-table-thead"
                  >
                    <tr>
                      <th
                        class="fishd-table-fixed-columns-in-body fishd-table-selection-column"
                      >
                        <span>
                          <div
                            class="fishd-table-selection"
                          >
                            <label
                              class="fishd-checkbox-wrapper"
                            >
                              <span
                                class="fishd-checkbox"
                              >
                                <input
                                  class="fishd-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="fishd-checkbox-inner"
                                />
                              </span>
                            </label>
                          </div>
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Name
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="fishd-table-tbody"
                  >
                    <tr
                      class="fishd-table-row fishd-table-row-level-0"
                      data-row-key="0"
                    >
                      <td
                        class="fishd-table-fixed-columns-in-body fishd-table-selection-column"
                      >
                        <span>
                          <label
                            class="fishd-checkbox-wrapper"
                          >
                            <span
                              class="fishd-checkbox"
                            >
                              <input
                                class="fishd-checkbox-input"
                                type="checkbox"
                              />
                              <span
                                class="fishd-checkbox-inner"
                              />
                            </span>
                          </label>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="fishd-table-row-indent indent-level-0"
                          style="padding-left:0px"
                        />
                        Jack
                      </td>
                    </tr>
                    <tr
                      class="fishd-table-row fishd-table-row-level-0"
                      data-row-key="1"
                    >
                      <td
                        class="fishd-table-fixed-columns-in-body fishd-table-selection-column"
                      >
                        <span>
                          <label
                            class="fishd-checkbox-wrapper"
                          >
                            <span
                              class="fishd-checkbox"
                            >
                              <input
                                class="fishd-checkbox-input"
                                type="checkbox"
                              />
                              <span
                                class="fishd-checkbox-inner"
                              />
                            </span>
                          </label>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="fishd-table-row-indent indent-level-0"
                          style="padding-left:0px"
                        />
                        Lucy
                      </td>
                    </tr>
                    <tr
                      class="fishd-table-row fishd-table-row-level-0"
                      data-row-key="2"
                    >
                      <td
                        class="fishd-table-fixed-columns-in-body fishd-table-selection-column"
                      >
                        <span>
                          <label
                            class="fishd-checkbox-wrapper"
                          >
                            <span
                              class="fishd-checkbox"
                            >
                              <input
                                class="fishd-checkbox-input"
                                type="checkbox"
                              />
                              <span
                                class="fishd-checkbox-inner"
                              />
                            </span>
                          </label>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="fishd-table-row-indent indent-level-0"
                          style="padding-left:0px"
                        />
                        Tom
                      </td>
                    </tr>
                    <tr
                      class="fishd-table-row fishd-table-row-level-0"
                      data-row-key="3"
                    >
                      <td
                        class="fishd-table-fixed-columns-in-body fishd-table-selection-column"
                      >
                        <span>
                          <label
                            class="fishd-checkbox-wrapper"
                          >
                            <span
                              class="fishd-checkbox"
                            >
                              <input
                                class="fishd-checkbox-input"
                                type="checkbox"
                              />
                              <span
                                class="fishd-checkbox-inner"
                              />
                            </span>
                          </label>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="fishd-table-row-indent indent-level-0"
                          style="padding-left:0px"
                        />
                        Jerry
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="fishd-table-fixed-left"
            >
              <div
                class="fishd-table-body-outer"
                style="-webkit-transform:translate3d (0, 0, 0)"
              >
                <div
                  class="fishd-table-body-inner"
                >
                  <table
                    class="fishd-table-fixed"
                  >
                    <colgroup>
                      <col />
                    </colgroup>
                    <thead
                      class="fishd-table-thead"
                    >
                      <tr>
                        <th
                          class="fishd-table-selection-column"
                        >
                          <span>
                            <div
                              class="fishd-table-selection"
                            >
                              <label
                                class="fishd-checkbox-wrapper"
                              >
                                <span
                                  class="fishd-checkbox"
                                >
                                  <input
                                    class="fishd-checkbox-input"
                                    type="checkbox"
                                  />
                                  <span
                                    class="fishd-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </div>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="fishd-table-tbody"
                    >
                      <tr
                        class="fishd-table-row fishd-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="fishd-table-selection-column"
                        >
                          <span>
                            <label
                              class="fishd-checkbox-wrapper"
                            >
                              <span
                                class="fishd-checkbox"
                              >
                                <input
                                  class="fishd-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="fishd-checkbox-inner"
                                />
                              </span>
                            </label>
                          </span>
                        </td>
                      </tr>
                      <tr
                        class="fishd-table-row fishd-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="fishd-table-selection-column"
                        >
                          <span>
                            <label
                              class="fishd-checkbox-wrapper"
                            >
                              <span
                                class="fishd-checkbox"
                              >
                                <input
                                  class="fishd-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="fishd-checkbox-inner"
                                />
                              </span>
                            </label>
                          </span>
                        </td>
                      </tr>
                      <tr
                        class="fishd-table-row fishd-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="fishd-table-selection-column"
                        >
                          <span>
                            <label
                              class="fishd-checkbox-wrapper"
                            >
                              <span
                                class="fishd-checkbox"
                              >
                                <input
                                  class="fishd-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="fishd-checkbox-inner"
                                />
                              </span>
                            </label>
                          </span>
                        </td>
                      </tr>
                      <tr
                        class="fishd-table-row fishd-table-row-level-0"
                        data-row-key="3"
                      >
                        <td
                          class="fishd-table-selection-column"
                        >
                          <span>
                            <label
                              class="fishd-checkbox-wrapper"
                            >
                              <span
                                class="fishd-checkbox"
                              >
                                <input
                                  class="fishd-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="fishd-checkbox-inner"
                                />
                              </span>
                            </label>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="fishd-pagination fishd-table-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="fishd-pagination-disabled fishd-pagination-prev"
          title="上一页"
        >
          <a
            class="fishd-pagination-item-link"
          />
        </li>
        <li
          class="fishd-pagination-item fishd-pagination-item-1 fishd-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="fishd-pagination-disabled fishd-pagination-next"
          title="下一页"
        >
          <a
            class="fishd-pagination-item-link"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection render with default selection correctly 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col />
                  <col />
                </colgroup>
                <thead
                  class="fishd-table-thead"
                >
                  <tr>
                    <th
                      class="fishd-table-selection-column fishd-table-selection-column-custom"
                    >
                      <span>
                        <div
                          class="fishd-table-selection"
                        >
                          <label
                            class="fishd-table-selection-select-all-custom fishd-checkbox-wrapper"
                          >
                            <span
                              class="fishd-checkbox"
                            >
                              <input
                                class="fishd-checkbox-input"
                                type="checkbox"
                              />
                              <span
                                class="fishd-checkbox-inner"
                              />
                            </span>
                          </label>
                          <div
                            class="fishd-table-selection-down fishd-dropdown-trigger"
                          >
                            <i
                              class="fishdicon fishdicon-down-bolder"
                            />
                          </div>
                        </div>
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Name
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="fishd-table-tbody"
                >
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="0"
                  >
                    <td
                      class="fishd-table-selection-column fishd-table-selection-column-custom"
                    >
                      <span>
                        <label
                          class="fishd-checkbox-wrapper"
                        >
                          <span
                            class="fishd-checkbox"
                          >
                            <input
                              class="fishd-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="fishd-checkbox-inner"
                            />
                          </span>
                        </label>
                      </span>
                    </td>
                    <td
                      class=""
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Jack
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="fishd-table-selection-column fishd-table-selection-column-custom"
                    >
                      <span>
                        <label
                          class="fishd-checkbox-wrapper"
                        >
                          <span
                            class="fishd-checkbox"
                          >
                            <input
                              class="fishd-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="fishd-checkbox-inner"
                            />
                          </span>
                        </label>
                      </span>
                    </td>
                    <td
                      class=""
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Lucy
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="fishd-table-selection-column fishd-table-selection-column-custom"
                    >
                      <span>
                        <label
                          class="fishd-checkbox-wrapper"
                        >
                          <span
                            class="fishd-checkbox"
                          >
                            <input
                              class="fishd-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="fishd-checkbox-inner"
                            />
                          </span>
                        </label>
                      </span>
                    </td>
                    <td
                      class=""
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Tom
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="3"
                  >
                    <td
                      class="fishd-table-selection-column fishd-table-selection-column-custom"
                    >
                      <span>
                        <label
                          class="fishd-checkbox-wrapper"
                        >
                          <span
                            class="fishd-checkbox"
                          >
                            <input
                              class="fishd-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="fishd-checkbox-inner"
                            />
                          </span>
                        </label>
                      </span>
                    </td>
                    <td
                      class=""
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Jerry
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="fishd-pagination fishd-table-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="fishd-pagination-disabled fishd-pagination-prev"
          title="上一页"
        >
          <a
            class="fishd-pagination-item-link"
          />
        </li>
        <li
          class="fishd-pagination-item fishd-pagination-item-1 fishd-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="fishd-pagination-disabled fishd-pagination-next"
          title="下一页"
        >
          <a
            class="fishd-pagination-item-link"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
